# Rust-Calculator

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  build.rs  cspell.json  old-refrenced-code.txt  templates.md
Executable-Files/: Rust-Calculator V6.5.0 Kubuntu  Rust-Calculator V7.0.0 Linux  Rust-Calculator V7.0.1 Linux
src/: calculator.rs  lib.rs  main.rs
ui/: appwindow.slint
