[package]
name = "Rust-Calculator"
version = "8.0.0"
edition = "2021"
build = "build.rs"
description = "A simple calculator I made in rust."


[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Rust Calculator"
identifier = "io.github.ExoticDG.Rust-Calculator"
icon = ["./icon.png", "./icon.png"]